--- a/index.html
+++ b/index.html
@@ -122,17 +122,27 @@
                 <div class="emoji">🧬</div>
                 <h2>Multiverse Creature Lab</h2>
                 <p>수집형 크리처 게임 - 소환, 탐사, 연구, 전투!</p>
+                <div style="margin-top:15px; font-size:0.8rem; color:#00e5ff;">지금 플레이하기 →</div>
             </a>
-            <a href="#" class="project-card">
-                <div class="emoji">🚀</div>
-                <h2>Coming Soon</h2>
-                <p>새로운 프로젝트가 곧 공개됩니다.</p>
+            <a href="https://github.com/ysh1537" class="project-card">
+                <div class="emoji">🐙</div>
+                <h2>GitHub Profile</h2>
+                <p>다양한 오픈소스 프로젝트와 실험적인 코드를 확인하세요.</p>
+                <div style="margin-top:15px; font-size:0.8rem; color:#e040fb;">방문하기 →</div>
             </a>
+        </div>
+
+        <!-- 하단 광고 영역 -->
+        <div class="ad-container" style="margin-top:50px;">
+            <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5874227298630347" data-ad-slot="auto"
+                data-ad-format="auto" data-full-width-responsive="true"></ins>
+            <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
         </div>
     </div>
 
     <footer>
-        © 2025 YSH1537. All rights reserved.
+        <p>© 2025 YSH1537. All rights reserved.</p>
+        <p style="margin-top:5px; opacity:0.5; font-size:0.75rem;">Powered by GitHub Pages & Google AdSense</p>
     </footer>
 </body>
 
