--- a/index.html
+++ b/index.html
@@ -118,6 +118,12 @@
         </div>
 
         <div class="projects">
+            <a href="https://www.heoyesol.kr" class="project-card" style="border-color: #00e5ff; box-shadow: 0 0 20px rgba(0, 229, 255, 0.2);">
+                <div class="emoji">🌌</div>
+                <h2>Cinematic Universe</h2>
+                <p>3D WebGL 포트폴리오 - The Architect's Multiverse</p>
+                <div style="margin-top:15px; font-size:0.8rem; color:#00e5ff; font-weight:bold;">ENTER UNIVERSE →</div>
+            </a>
             <a href="/game/" class="project-card">
                 <div class="emoji">🧬</div>
                 <h2>Multiverse Creature Lab</h2>
