--- a/index.html
+++ b/index.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 <html lang="ko">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YSH1537 - 프로젝트 허브</title>
-    <!-- Google AdSense -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5874227298630347"
-        crossorigin="anonymous"></script>
+    <title>The Architect's Multiverse | YSH1537</title>
+    
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Orbitron:wght@400;700;900&display=swap" rel="stylesheet">
+
+    <!-- AdSense (Preserved) -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5874227298630347" crossorigin="anonymous"></script>
+
     <style>
+        :root {
+            --neon-blue: #00f3ff;
+            --neon-purple: #bc13fe;
+            --bg-dark: #050510;
+            --glass-bg: rgba(255, 255, 255, 0.05);
+            --glass-border: rgba(255, 255, 255, 0.1);
+        }
+
         * {
             margin: 0;
             padding: 0;
@@ -16,140 +29,249 @@
         }
 
         body {
-            font-family: 'Segoe UI', system-ui, sans-serif;
-            background: linear-gradient(135deg, #0a0f1a 0%, #1a1535 50%, #0d1520 100%);
+            font-family: 'Inter', sans-serif;
+            background-color: var(--bg-dark);
+            background-image: 
+                radial-gradient(circle at 50% 0%, #1a1a40 0%, transparent 60%),
+                radial-gradient(circle at 80% 80%, #150020 0%, transparent 50%);
+            color: #fff;
             min-height: 100vh;
-            color: #f0f4ff;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            padding: 40px 20px;
+            overflow-x: hidden;
+        }
+
+        /* Animated Grid Background */
+        .grid-bg {
+            position: fixed;
+            top: 0; left: 0; width: 100%; height: 100%;
+            background-image: 
+                linear-gradient(rgba(255, 255, 255, 0.03) 1px, transparent 1px),
+                linear-gradient(90deg, rgba(255, 255, 255, 0.03) 1px, transparent 1px);
+            background-size: 50px 50px;
+            perspective: 500px;
+            transform-style: preserve-3d;
+            animation: moveGrid 20s linear infinite;
+            z-index: -1;
+            opacity: 0.5;
+            mask-image: radial-gradient(circle at center, black 40%, transparent 100%);
+        }
+
+        @keyframes moveGrid {
+            0% { transform: translateY(0); }
+            100% { transform: translateY(50px); }
         }
 
         .container {
-            max-width: 800px;
+            max-width: 1200px;
+            width: 90%;
+            z-index: 10;
             text-align: center;
+            padding: 40px 0;
         }
 
         h1 {
-            font-size: 3rem;
-            background: linear-gradient(90deg, #00e5ff, #e040fb);
+            font-family: 'Orbitron', sans-serif;
+            font-size: clamp(2.5rem, 5vw, 4.5rem);
+            font-weight: 900;
+            text-transform: uppercase;
+            letter-spacing: 4px;
+            background: linear-gradient(180deg, #fff, #888);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
-            margin-bottom: 20px;
+            margin-bottom: 0.5rem;
+            text-shadow: 0 0 30px rgba(255, 255, 255, 0.3);
         }
 
         .subtitle {
-            color: #b8c5e8;
-            font-size: 1.2rem;
-            margin-bottom: 50px;
+            font-size: clamp(1rem, 2vw, 1.2rem);
+            color: var(--neon-blue);
+            letter-spacing: 2px;
+            margin-bottom: 3rem;
+            text-transform: uppercase;
+            opacity: 0.8;
         }
 
-        .projects {
+        .portal-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-            gap: 20px;
-            margin-top: 30px;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 30px;
+            margin-top: 2rem;
+            width: 100%;
         }
 
-        .project-card {
-            background: rgba(30, 25, 55, 0.9);
-            border: 1px solid rgba(255, 255, 255, 0.1);
-            border-radius: 16px;
-            padding: 30px;
+        .card {
+            background: var(--glass-bg);
+            border: 1px solid var(--glass-border);
+            backdrop-filter: blur(10px);
+            border-radius: 20px;
+            padding: 40px 30px;
             text-decoration: none;
-            color: inherit;
-            transition: transform 0.3s, box-shadow 0.3s;
+            color: #fff;
+            transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+            position: relative;
+            overflow: hidden;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            group: card;
         }
 
-        .project-card:hover {
-            transform: translateY(-8px);
-            box-shadow: 0 10px 40px rgba(0, 229, 255, 0.3);
-            border-color: #00e5ff;
+        .card::before {
+            content: '';
+            position: absolute;
+            top: 0; left: 0; width: 100%; height: 100%;
+            background: linear-gradient(45deg, transparent, rgba(255, 255, 255, 0.05), transparent);
+            transform: translateX(-100%);
+            transition: 0.5s;
         }
 
-        .project-card h2 {
-            color: #00e5ff;
-            margin-bottom: 10px;
+        .card:hover {
+            transform: translateY(-10px) scale(1.02);
+            border-color: var(--card-color);
+            box-shadow: 0 10px 40px -10px var(--card-glow);
         }
 
-        .project-card p {
-            color: #8b949e;
+        .card:hover::before {
+            transform: translateX(100%);
+        }
+
+        .card-icon {
+            font-size: 3.5rem;
+            margin-bottom: 1.5rem;
+            filter: drop-shadow(0 0 10px var(--card-glow));
+            transition: transform 0.3s;
+        }
+
+        .card:hover .card-icon {
+            transform: scale(1.1) rotate(5deg);
+        }
+
+        .card h2 {
+            font-family: 'Orbitron', sans-serif;
+            font-size: 1.5rem;
+            margin-bottom: 1rem;
+            color: var(--card-color);
+        }
+
+        .card p {
+            color: #aaa;
             font-size: 0.95rem;
+            line-height: 1.6;
+            margin-bottom: 2rem;
         }
 
-        .project-card .emoji {
-            font-size: 3rem;
-            margin-bottom: 15px;
+        .card-btn {
+            margin-top: auto;
+            padding: 12px 30px;
+            border-radius: 50px;
+            background: transparent;
+            border: 1px solid var(--card-color);
+            color: var(--card-color);
+            font-family: 'Orbitron', sans-serif;
+            font-size: 0.8rem;
+            letter-spacing: 1px;
+            transition: 0.3s;
+            text-transform: uppercase;
+        }
+
+        .card:hover .card-btn {
+            background: var(--card-color);
+            color: #000;
+            box-shadow: 0 0 20px var(--card-glow);
+        }
+
+        /* Specific Card Styles */
+        .card.main {
+            --card-color: var(--neon-blue);
+            --card-glow: rgba(0, 243, 255, 0.4);
+            grid-column: 1 / -1; /* Full width on mobile/tablet */
+        }
+
+        .card.game {
+            --card-color: #ff0055;
+            --card-glow: rgba(255, 0, 85, 0.4);
+        }
+
+        .card.github {
+            --card-color: #ffffff;
+            --card-glow: rgba(255, 255, 255, 0.3);
         }
 
         footer {
-            margin-top: 60px;
-            color: #555;
-            font-size: 0.9rem;
+            margin-top: 4rem;
+            color: #444;
+            font-size: 0.8rem;
+            text-transform: uppercase;
+            letter-spacing: 2px;
         }
 
-        /* AdSense 영역 */
-        .ad-container {
+        /* AdSense Container Styling */
+        .ad-unit {
             width: 100%;
             max-width: 728px;
-            min-height: 90px;
-            margin: 30px auto;
-            background: rgba(0, 0, 0, 0.2);
-            border-radius: 8px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            margin: 2rem auto;
+            border-radius: 10px;
+            overflow: hidden;
+            background: rgba(0,0,0,0.3);
+            border: 1px solid rgba(255,255,255,0.05);
         }
     </style>
 </head>
-
 <body>
+
+    <div class="grid-bg"></div>
+
     <div class="container">
-        <h1>YSH1537</h1>
-        <p class="subtitle">프로젝트 허브 & 포트폴리오</p>
+        <h1>Cinematic Multiverse</h1>
+        <div class="subtitle">Architect : Yesol Heo</div>
 
-        <!-- AdSense 광고 영역 -->
-        <div class="ad-container">
-            <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5874227298630347" data-ad-slot="auto"
+        <!-- Top Ad -->
+        <div class="ad-unit">
+             <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5874227298630347" data-ad-slot="auto"
                 data-ad-format="auto" data-full-width-responsive="true"></ins>
             <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
         </div>
 
-        <div class="projects">
-            <a href="https://www.heoyesol.kr" class="project-card" style="border-color: #00e5ff; box-shadow: 0 0 20px rgba(0, 229, 255, 0.2);">
-                <div class="emoji">🌌</div>
-                <h2>Cinematic Universe</h2>
-                <p>3D WebGL 포트폴리오 - The Architect's Multiverse</p>
-                <div style="margin-top:15px; font-size:0.8rem; color:#00e5ff; font-weight:bold;">ENTER UNIVERSE →</div>
+        <div class="portal-grid">
+            <!-- Main Portfolio -->
+            <a href="https://www.heoyesol.kr" class="card main">
+                <div class="card-icon">🌌</div>
+                <h2>The Main Universe</h2>
+                <p>Experience the immersive WebGL portfolio. Travel through sectors, explore labs, and dive into the architect's vision.</p>
+                <div class="card-btn">Enter Universe</div>
             </a>
-            <a href="/game/" class="project-card">
-                <div class="emoji">🧬</div>
-                <h2>Multiverse Creature Lab</h2>
-                <p>수집형 크리처 게임 - 소환, 탐사, 연구, 전투!</p>
-                <div style="margin-top:15px; font-size:0.8rem; color:#00e5ff;">지금 플레이하기 →</div>
+
+            <!-- Game Project -->
+            <a href="/game/" class="card game">
+                <div class="card-icon">🧬</div>
+                <h2>Creature Lab</h2>
+                <p>Collect species, research DNA, and battle in this multiverse simulation capability test.</p>
+                <div class="card-btn">Initialize Lab</div>
             </a>
-            <a href="https://github.com/ysh1537" class="project-card">
-                <div class="emoji">🐙</div>
-                <h2>GitHub Profile</h2>
-                <p>다양한 오픈소스 프로젝트와 실험적인 코드를 확인하세요.</p>
-                <div style="margin-top:15px; font-size:0.8rem; color:#e040fb;">방문하기 →</div>
+
+            <!-- GitHub -->
+            <a href="https://github.com/ysh1537" class="card github">
+                <div class="card-icon">💻</div>
+                <h2>Source Code</h2>
+                <p>Access the blueprints. Review the open-source architecture behind these realities.</p>
+                <div class="card-btn">Access Repo</div>
             </a>
         </div>
 
-        <!-- 하단 광고 영역 -->
-        <div class="ad-container" style="margin-top:50px;">
-            <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5874227298630347" data-ad-slot="auto"
+        <!-- Bottom Ad -->
+        <div class="ad-unit">
+             <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5874227298630347" data-ad-slot="auto"
                 data-ad-format="auto" data-full-width-responsive="true"></ins>
             <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
         </div>
+
+        <footer>
+            Systems Online. v2.0.25 [Multiverse Hub]
+        </footer>
     </div>
 
-    <footer>
-        <p>© 2025 YSH1537. All rights reserved.</p>
-        <p style="margin-top:5px; opacity:0.5; font-size:0.75rem;">Powered by GitHub Pages & Google AdSense</p>
-    </footer>
 </body>
-
 </html>
