fix: 직함 수정 (Developer -> Product Manager)

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>허예솔 | Software Developer</title>
+    <title>허예솔 | Product Manager</title>
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -251,7 +251,7 @@
 
     <div class="container">
         <h1>허예솔</h1>
-        <div class="subtitle">Software Developer</div>
+        <div class="subtitle">Product Manager</div>
 
         <!-- Top Ad -->
         <div class="ad-unit">
